# qeraser

fileeraser/: AUTHORS  Doxyfile  FileEraser.filelist  FileEraser.kdevelop  FileEraser.kdevses  Makefile  Makefile.am  Makefile.in  README  THANKS  config.cache  config.status  configure  configure.in.in  fileeraser.doxygen  fileeraser.kdevelop  fileeraser.kdevprj  fileeraser.kdevses  fileeraser.lsm  fileeraser.pro  fileeraser.pws  fileeraser.spec  libtool  subdirs
fileeraser/admin/: mkinstalldirs
fileeraser/autom4te.cache/: traces.0
fileeraser/config_api/: Makefile  config_api.c  config_api.h  config_api.pro  find.c  find.h  utils.c  utils.h
fileeraser/console/: Makefile  commands.h  console.pro  feraser.h  filelib.h
fileeraser/fileeraser/: Makefile  Makefile.am  Makefile.in  config_dialog.ui  config_frame.h  fileeraser.pro  fileeraser.ui  fileeraser.ui.h  fileeraserimpl.cpp  gmon.out  info_dialog.moc.cpp  info_dialog.ui  main.cpp  manual_dialog.ui  manual_dialogimpl.cpp  manual_dialogimpl.h  settings.h  sysmanage.h
fileeraser/fileeraser/config_api/: Makefile  Makefile.am  Makefile.in  config_api.c  config_api.h  find.c  find.h  utils.c  utils.h
fileeraser/fileeraser/console/: Makefile  Makefile.am  Makefile.in  main.cpp  readme.txt
fileeraser/fileeraser/docs/: Makefile  Makefile.am  Makefile.in  book1.html  c10.html  c19.html  c6.html  c7.html  chap1.sgm  chap2.sgm  chap3.sgm  index.docbook  r16.html  x16.html
fileeraser/fileeraser/docs/en/: Makefile  Makefile.am  Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
fileeraser/fileeraser/images/: Makefile  Makefile.am  Makefile.in
fileeraser/fileeraser/manuals/: Makefile  Makefile.am  Makefile.in  fileeraser.htm
fileeraser/fileeraser/templates/: header_template
fileeraser/fileeraser/translations/: Makefile  Makefile.am  Makefile.in  fileeraser_de.qm
fileeraser/images/: Makefile  Makefile.in
fileeraser/src/: Makefile  config_dialog.cpp  config_dialog.h  config_erasing.cpp  config_erasing.h  config_erasing.ui  config_frame.cpp  config_general.cpp  config_general.h  config_general.ui  fileeraser.cpp  fileeraser.h  fileeraser_de.ts  fileeraserimpl.h  info_dialog.cpp  info_dialog.h  main.cpp  manual_dialog.cpp  manual_dialog.h  moc_config_dialog.cpp  moc_config_erasing.cpp  moc_config_frame.cpp  moc_config_general.cpp  moc_fileeraser.cpp  moc_fileeraserimpl.cpp  moc_info_dialog.cpp  moc_manual_dialog.cpp  moc_manual_dialogimpl.cpp  settings.h  src.pro
fileeraser/src/sdfa/: config_erasing.cpp  feraser  sdfa
fileeraser/translations/: Makefile  Makefile.in
