####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libconfig_api.a

INCLUDES = $(all_includes)

libconfig_api_a_METASOURCES = AUTO

libconfig_api_a_SOURCES = utils.c find.c config_api.c 
KDE_OPTIONS = qtonly


EXTRA_DIST = config_api.c config_api.h find.h find.c utils.c utils.h Makefile 

####### kdevelop will overwrite this part!!! (end)############

OBJECT 	= config_api.o find.o utils.o
LIB	= libconfig_api.a
