####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libconsole.a

INCLUDES = $(all_includes)

libconsole_a_METASOURCES = AUTO

libconsole_a_SOURCES = main.cpp 
KDE_OPTIONS = qtonly


EXTRA_DIST = commands.h feraser.h filelib.h main.cpp 

####### kdevelop will overwrite this part!!! (end)############

bin_PROGRAMS = feraser

feraser_SOURCES = main.cpp
feraser_LDFLAGS = $(all_libraries)

AM_CPPFLAGS = $(all_includes)

METASOURCES = AUTO
